--- a/scss/structure.scss
+++ b/scss/structure.scss
@@ -29,26 +29,21 @@ padding-bottom: 20px;
     src: url(fonts/Proxima_Nova_ScOsf_Extra_Condensed_Bold.ttf);
 }
 @font-face {
-    font-family: Gill;
-    src: url(fonts/GillSans.ttc);
+    font-family: PTSerif-Bold;
+    src: url(fonts/PTSerif-Bold.ttf);
 }
 
 @font-face {
-    font-family: Gill;
-    src: url(fonts/GillSans.ttc);
+    font-family: PTSerif-BoldItalic;
+    src: url(fonts/PTSerif-BoldItalic.ttf);
 }
 
 @font-face {
-    font-family: Gill;
-    src: url(fonts/GillSans.ttc);
+    font-family: PTSerif-Italic;
+    src: url(fonts/PTSerif-Italic.ttf);
 }
 
 @font-face {
-    font-family: Gill;
-    src: url(fonts/GillSans.ttc);
-}
-
-@font-face {
-    font-family: Gill;
-    src: url(fonts/GillSans.ttc);
+    font-family: PTSerif-Regular;
+    src: url(fonts/PTSerif-Regular.ttf);
 }
