--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -10,13 +10,14 @@
 
     .name {
         color: #EE4367;
-        font-family: PT Serif;
+        font-family:serif;
         font-size:15px;
     }
     .position{
         margin-top: 5px;
         font-size:10px;
         color:#A8A8A8;
+        font-family:serif;
     }
 }
 .upcomingevents {
