--- a/scss/footer/footer.scss
+++ b/scss/footer/footer.scss
@@ -11,6 +11,7 @@ footer{
     margin-bottom: 0px;
     font-size: 16px;
     text-align: center;
+    font-family: GillSans;
     
     .logo {
         width: 92px;
