--- a/scss/footer/footer.scss
+++ b/scss/footer/footer.scss
@@ -80,25 +80,44 @@ footer{
     }
 }
 
-@media only screen and (max-width: 1060px) { 
+@media only screen and (max-width: 800px) { 
       
     footer{
-      position: fixed; 
+      //position: fixed; 
       bottom: 0;
-      width: 100%;
-      height: 100px;
+      width: 100vw;
+      height: 550px;
       background-color: #EE4367;
       background-size: cover;
       margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      padding: 0px 120px;
-      margin-top: 130px;
+      display: block;
+      
+      //padding: 0px 120px;
+      //margin-top: 130px;
     }
     footer .logo{
-      width: 92px;
+      width: 50vw;
       height: 42px;
+      //align-self: center;
+    }
+    footer .address{
+      margin-top: 60px;
+      width: 70vw;
+      font-size: 16px;
       align-self: center;
+      color: #fff;
+    }
+    footer .emailstuff{
+      //max-width: 100vw;
+      margin: 0 auto;
+
+      .emailbox{
+        max-width:70%;
+      }
+      .subscribe{
+        max-width:30%;
+      }
+
     }
     footer .copyright{
       font-size: 12px;
@@ -106,6 +125,7 @@ footer{
       color: #fff;
     }
     footer .socialmedia{
+      margin-top: 60px;
       width:100px;
       display: flex;
       justify-content: space-between;
@@ -113,3 +133,5 @@ footer{
       color: #fff;
     }
 }
+
+
