--- a/scss/gallery/gallery2.scss
+++ b/scss/gallery/gallery2.scss
@@ -51,3 +51,37 @@
         }
     }
 }
+@media only screen and (max-width: 800px) { 
+    .gallery2 {
+        display: block;
+        max-width: 100vw;
+        margin: auto;
+
+        .gal2image1 {
+            //margin-top: 500px;
+            width: 100vw;
+            
+            .gal2text1 {
+                margin-top: 100px;
+                display: flex;
+                font-size: 30px;
+            }
+            .gal2text2 {
+                display: flex;
+                font-size: 30px;
+            }
+        }
+        .gal2text3{
+            display: block;
+            margin-bottom: 50px;
+            height:200px;
+
+            .leftcol {
+                width: 80vw;
+            }
+            .rightcol {
+                width: 80vw;
+            }
+        }
+    }
+}
