--- a/scss/gallery/gallery4.scss
+++ b/scss/gallery/gallery4.scss
@@ -51,3 +51,40 @@
         }
     }
 }
+@media only screen and (max-width: 800px) { 
+    .gallery4 {
+        display: block;
+        max-width: 100vw;
+        margin: auto;
+
+        .gal4image1 {
+            //margin-top: 500px;
+            width: 100vw;
+            
+            .gal4text1 {
+                margin-top: 100px;
+                display: flex;
+                font-size: 30px;
+            }
+            .gal4text2 {
+                display: flex;
+                font-size: 30px;
+            }
+        }
+        .gal4text3{
+            display: flex;
+            margin-bottom: 50px;
+            height:200px;
+            padding-left: 30px;
+            padding-right: 30px;
+            text-align: center;
+
+            .leftcol {
+                width: 80vw;
+            }
+            .rightcol {
+                width: 80vw;
+            }
+        }
+    }
+}
