--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -293,3 +293,50 @@
         }
     }   
 }
+
+@media only screen and (max-width: 800px){
+.home{
+        max-width:800px;
+    
+    .homequote{
+        max-width:80vw;
+        height: 25vh;
+    }
+    .upcomingevents {
+        display:block;
+        max-width:100vw;
+        max-height:30vh;
+
+        .headlineborderbox{
+            width:800px;
+            margin-top: 50px;
+            .headlineborder{
+                display:flex;
+            }
+        }
+    }
+    .allupcomingevents{
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin:0 auto;
+
+        .upcomingevents1{
+            max-width: 100vw;
+        }
+        .upcomingevents2{
+            max-width: 100vw;
+        }
+        .upcomingevents3{
+            max-width: 100vw;
+        }
+        .upcomingevents4{
+            max-width: 100vw;
+        }
+        .upcomingevents5{
+            max-width: 100vw;
+        }
+
+    }
+}
+}
