--- a/css/styles.css
+++ b/css/styles.css
@@ -898,6 +898,7 @@ footer .copyright {
   font-size: 15px;
   width: 245px;
   height: 22px;
+  color: black;
 }
 .blog .blogcol1 .jun .box1-1 .boxpara2 {
   margin-top: 10px;
