--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -57,6 +57,7 @@
                     font-size: 15px;
                     width:245px;
                     height:22px;
+                    color:black;
                 }
                 .boxpara2{
                     margin-top:10px;
